Add: ability to search environment applicaiton versions by product
